--- a/changelog
+++ b/changelog
@@ -7,6 +7,7 @@
 
 #### Fixed
 - Unauthorized redirect path not working for views, throws 403.
+- Default JS function request not sending json data correctly.
 
 #### Removed
 -
