--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@
 
 #### Changed
 - Template::oneline() is now Template::flex(), allowing for dynamic creation of templates.
+- Improvement of HTML semantics for main.php.
 
 #### Fixed
 - Unauthorized redirect path not working for views, throws 403.
