mod(Templating): Improved main template html, script and styles

--- a/changelog
+++ b/changelog
@@ -12,6 +12,7 @@
 #### Fixed
 - Skeleton: Sites folder not accounted for deploy.sh and index.php
 - Skeleton: .htaccess fallback not working.
+- Skeleton: Sites folder not accounted for watch.sh
 
 #### Removed
 - htmlspecialchars method from Request::sanitizeData().
