fix(ValidationSlave): ValidationWorker is not initialized. (jesus christ)

--- a/changelog
+++ b/changelog
@@ -20,6 +20,7 @@
 - Skeleton: .htaccess fallback not working.
 - Skeleton: Sites folder not accounted for watch.sh
 - NotFoundException and NotAuthorizedException are not being handled correctly.
+- ValidationWorker is not initialized. (jesus christ)
 
 #### Removed
 - htmlspecialchars method from Request::sanitizeData().
