mod(Template): Jquery is now loaded from local files.

--- a/changelog
+++ b/changelog
@@ -25,6 +25,7 @@
 - Template component now sanitazes file paths.
 - AuthSlave::validateCSRF() now uses hash_equals() for improved security.
 - Improved PDO Exception handling in DataSlave.
+- Jquery is now loaded from local files.
 
 #### Fixed
 - Skeleton: Sites folder not accounted for deploy.sh and index.php
