--- a/changelog
+++ b/changelog
@@ -1,3 +1,18 @@
+### [v0.4] - 2026-01-XX
+#### Added
+- 
+
+#### Changed
+- 
+
+#### Fixed
+- 
+
+#### Removed
+- sitePath parameter from Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() 
+
+---
+
 ### [v0.3] - 2025-12-17
 #### Added
 - Config::configurePrivacy(...) for defining whether to register logs or restrict what data to register.
