--- a/changelog
+++ b/changelog
@@ -13,6 +13,7 @@
 - DataSlave now uses regex filtering for injected strings (table, cols, conditions and orderBy).
 - Request now sanitizes data in different levels of severity.
 - MailSlave::getMailTemplate() now uses realpath() to prevent directory traversal attacks.
+- MailSlave::setMailerAttachments() now uses realpath() to prevent directory traversal attacks.
 
 #### Fixed
 - Logs are not being stored inside storage directory.
