fix(ValidationSlave): phone() returns false for a valid 9-digit phone number.

--- a/changelog
+++ b/changelog
@@ -52,6 +52,7 @@
 #### Fixed
 - Logs are not being stored inside storage directory.
 - AuthWorker::autologin() produces a timing attack vulnerability.
+- ValidationWorker::phone() returns false for a valid 9-digit phone number.
 
 #### Removed
 - sitePath parameter from Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() 
